gen/storage/v1beta2/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-storage1_beta2 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/storage/v1beta2/lib)
error[E0277]: the trait bound `chrono::date::Date<chrono::offset::utc::Utc>: schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Deserialize<'_>` is not satisfied
  --> gen/storage/v1beta2/lib/src/lib.rs:81:9
   |
81 |         #[doc = "A date in RFC 3339 format with only the date part, e.g. \"2013-01-15\". This condition is satisfied when an object is created before midnight of the specified date in UTC."]
   |         ^ the trait `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Deserialize<'_>` is not implemented for `chrono::date::Date<chrono::offset::utc::Utc>`
   |
   = note: required because of the requirements on the impl of `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Deserialize<'_>` for `std::option::Option<chrono::date::Date<chrono::offset::utc::Utc>>`
   = note: required by `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::de::SeqAccess::next_element`

error[E0277]: the trait bound `chrono::date::Date<chrono::offset::utc::Utc>: schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Deserialize<'_>` is not satisfied
  --> gen/storage/v1beta2/lib/src/lib.rs:81:9
   |
81 |         #[doc = "A date in RFC 3339 format with only the date part, e.g. \"2013-01-15\". This condition is satisfied when an object is created before midnight of the specified date in UTC."]
   |         ^ the trait `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Deserialize<'_>` is not implemented for `chrono::date::Date<chrono::offset::utc::Utc>`
   |
   = note: required because of the requirements on the impl of `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Deserialize<'_>` for `std::option::Option<chrono::date::Date<chrono::offset::utc::Utc>>`
   = note: required by `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::de::MapAccess::next_value`

error[E0277]: the trait bound `chrono::date::Date<chrono::offset::utc::Utc>: schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Serialize` is not satisfied
  --> gen/storage/v1beta2/lib/src/lib.rs:81:9
   |
81 |         #[doc = "A date in RFC 3339 format with only the date part, e.g. \"2013-01-15\". This condition is satisfied when an object is created before midnight of the specified date in UTC."]
   |         ^ the trait `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Serialize` is not implemented for `chrono::date::Date<chrono::offset::utc::Utc>`
   |
   = note: required because of the requirements on the impl of `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::Serialize` for `std::option::Option<chrono::date::Date<chrono::offset::utc::Utc>>`
   = note: required by `schemas::_IMPL_SERIALIZE_FOR_BucketCorsItems::_serde::ser::SerializeStruct::serialize_field`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
error: Could not compile `google-storage1_beta2`.

To learn more, run the command again with --verbose.
